ULMS-3169 Fixed bug with scrollbar in desktop view

--- a/packages/presentation/src/presentation.module.css
+++ b/packages/presentation/src/presentation.module.css
@@ -7,23 +7,23 @@
 }
 
 .listWrapper,
-.slide {
+.transformWrapper {
   scrollbar-width: thin;
   scrollbar-color: #d5d7e1 #f5f6f9;
 }
 
 .listWrapper::-webkit-scrollbar,
-.slide::-webkit-scrollbar {
+.transformWrapper::-webkit-scrollbar {
   width: 6px;
 }
 
 .listWrapper::-webkit-scrollbar-thumb,
-.slide::-webkit-scrollbar-thumb {
+.transformWrapper::-webkit-scrollbar-thumb {
   background-color: #d5d7e1;
 }
 
 .listWrapper::-webkit-scrollbar-track,
-.slide::-webkit-scrollbar-track {
+.transformWrapper::-webkit-scrollbar-track {
   background: #f5f6f9;
   border-radius: 3px;
 }
@@ -148,11 +148,6 @@
   transform: translate(-50%, -50%);
 }
 
-.fitToWidth {
-  overflow: hidden;
-  overflow-y: scroll;
-}
-
 .root .slideWrapper .controls {
   min-height: 30px;
   margin-top: 20px;
@@ -203,4 +198,9 @@
 .transformComponent {
   height: 100% !important;
   width: 100% !important;
+}
+
+.fitToWidth .transformWrapper {
+  overflow: hidden;
+  overflow-y: scroll;
 }
